# ttychat

./: .editorconfig  Cargo.toml  Makefile  README.md  install.ps1  install.sh  uninstall.sh
.github/workflows/: release.yml
assets/: logo.txt
pkg/arch/: PKGBUILD
src/: config.rs  crypto.rs  events.rs  main.rs  net.rs  notify.rs
src/app/: logic.rs  mod.rs  state.rs
src/ui/: assets.rs  chat.rs  connect.rs  mod.rs  splash.rs
src/ui/screens/: auth.rs  enroll.rs  error.rs  key_info.rs  mod.rs
src/widgets/: messages.rs
