[package]
name = "ttychat"
version = "0.1.0"
edition = "2021"
description = "ttychat TUI client"

[[bin]]
name = "ttychat"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
futures = "0.3"

rustls = { version = "0.23", default-features = false, features = ["tls12", "ring"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
unicode-width = "0.2"
tokio-stream = { version = "0.1", features = ["io-util"] }
rodio = { version = "0.21", features = ["mp3"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
